crates/hir-ty/tests/snapshots/jls_deprecation__body_reference_kinds_are_all_reported.snap
---
source: crates/hir-ty/tests/jls_deprecation.rs
expression: out
---
FILE /src/q/Refs.java:
package q;

class Refs {
    @Deprecated static class C {}
}

FILE /src/q/UseRefs.java:
package q;

class UseRefs {
    void cast(Object o) { Refs.C c = (Refs.C) o; }
    Class<?> literal() { return Refs.C.class; }
    void local() { Refs.C c = null; }
}

method cast(java.lang.Object): void
  @3:26..3:32 'Refs.C': deprecated-use: C in Refs has been deprecated
  @3:38..3:44 'Refs.C': deprecated-use: C in Refs has been deprecated
method literal(): java.lang.Class<?>
  @4:32..4:38 'Refs.C': deprecated-use: C in Refs has been deprecated
method local(): void
  @5:19..5:25 'Refs.C': deprecated-use: C in Refs has been deprecated
