crates/hir-ty/tests/snapshots/jls_deprecation__class_overload_is_not_a_lambda_target.snap
---
source: crates/hir-ty/tests/jls_deprecation.rs
expression: out
---
FILE /src/q/U.java:
package q;

class U {
    void m(T t) {
        t.use(() -> {
        });
    }
}
