crates/hir-ty/tests/snapshots/jls_deprecation__enum_constant_scope.snap
---
source: crates/hir-ty/tests/jls_deprecation.rs
expression: out
---
FILE /src/q/Both.java:
package q;

@Deprecated
class Both {
    @Deprecated void sm() {}
    @Deprecated static int f = 1;
    static class Nested {
        @Deprecated void nm() {}
    }
}

FILE /src/q/Cases.java:
package q;

class Cases {
    enum E {
        @SuppressWarnings("deprecation")
        A(new Both()),
        B(new Both());

        E(Object o) {
        }
    }
}

constant B
  @6:14..6:18 'Both': deprecated-use: Both in q has been deprecated
