crates/hir-ty/tests/snapshots/jls_deprecation__library_deprecation_in_declarations_is_reported.snap
---
source: crates/hir-ty/tests/jls_deprecation.rs
expression: out
---
FILE /src/q/UseDecl.java:
package q;

import com.example.Legacy;

class UseDecl extends Legacy {
    Legacy field;
}

@4:22: deprecated-use: Legacy in com.example has been deprecated
@5:4: deprecated-use: Legacy in com.example has been deprecated
