crates/hir-ty/tests/snapshots/jls_deprecation__same_outermost_class_is_exempt.snap
---
source: crates/hir-ty/tests/jls_deprecation.rs
expression: out
---
FILE /src/q/Outer.java:
package q;

class Outer {
    @Deprecated void dm() {}
    static class Inner {
        void u() { new Outer().dm(); }
    }
    void self() { new Outer().dm(); }
}
